--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+mail.content.registration=Your role: %s (%s).\n Your registration code: %s
+mail.host=smtp.gmail.com
+mail.port=587
+mail.user.email=4141zx@gmail.com
+mail.user.password=hrdwuivfatusauku
+mail.transport.protocol=smtp
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.debug=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
+secure.registration.code.length=10
